--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       </div>
     </div>
   </body>
-  <script src="./node_modules/axios/dist/axios.min.js"></script>
+  <script src="./axios/dist/axios.min.js"></script>
   <script src="main.js"></script>
 </html>
+
