--- a/index.html
+++ b/index.html
@@ -34,18 +34,19 @@
             </div>
             <div></div>
         </div>
+      
              <div class="card">
             <div class="header">
-                <h1>الفجر</h1>
+                <h1>الشروق</h1>
             </div>
             <div class="body">
                 <h1 class="time" id="sunriseTime"></h1>
             </div>
             <div></div>
         </div>
-             <div class="card">
+                 <div class="card">
             <div class="header">
-                <h1>الشروق</h1>
+                <h1>الظهر</h1>
             </div>
             <div class="body">
                 <h1 class="time" id="dhurhTime"></h1>
@@ -94,4 +95,5 @@
   <script src="./axios/dist/axios.min.js"></script>
   <script src="main.js"></script>
 </html>
+
 
